updated bound script

--- a/batch_queue_bounds.ipynb
+++ b/batch_queue_bounds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
      "output_type": "stream",
      "text": [
       "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON) \r\n",
-      "            103465     alvis     bash  frejohk  R    6:04:33      1 alvis1-08 \r\n"
+      "            103465     alvis     bash  frejohk  R    6:25:56      1 alvis1-08 \r\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {
     "scrolled": false
    },
@@ -186,7 +186,9 @@
       "\n",
       "alpha:0.1\n",
       "  epsilon:0.01\n",
-      "    sigma:[1, 2]\n"
+      "    sigma:[3, 2]\n",
+      "    sigma:[1, 2]\n",
+      "    sigma:[3, 3]\n"
      ]
     }
    ],
@@ -230,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['./logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_0-103884', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_45-103885', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_90-103886', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_135-103887', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_180-103888', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_225-103889', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_270-103890', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_315-103891', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_360-103892', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_405-103893', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_450-103894', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_495-103895', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-1_540-103896', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_1-103897', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_2-103898', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_3-103899', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_4-103900', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_5-103901', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_6-103902', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_7-103903', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_8-103904', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_9-103905', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_10-103906', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_11-103907', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_12-103908', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_13-103909', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-10_B-germain_c-2_14-103910']\n"
+      "['./logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_0-103959', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_45-103960', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_90-103961', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_135-103962', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_180-103963', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_225-103964', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_270-103965', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_315-103966', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_360-103967', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_405-103968', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_450-103969', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_495-103970', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_540-103971', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_1-103972', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_2-103973', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_3-103974', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_4-103975', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_5-103976', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_6-103977', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_7-103978', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_8-103979', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_9-103980', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_10-103981', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_11-103982', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_12-103983', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_13-103984', './logs/batch_t-2_r-69105_a-0.1000_s-32_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_14-103985', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_0-103986', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_45-103987', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_90-103988', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_135-103989', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_180-103990', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_225-103991', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_270-103992', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_315-103993', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_360-103994', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_405-103995', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_450-103996', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_495-103997', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_540-103998', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_1-103999', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_2-104000', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_3-104001', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_4-104002', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_5-104003', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_6-104004', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_7-104005', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_8-104006', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_9-104007', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_10-104008', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_11-104009', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_12-104010', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_13-104011', './logs/batch_t-2_r-69105_a-0.1000_s-12_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_14-104012', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_0-104013', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_45-104014', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_90-104015', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_135-104016', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_180-104017', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_225-104018', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_270-104019', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_315-104020', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_360-104021', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_405-104022', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_450-104023', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_495-104024', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-1_540-104025', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_1-104026', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_2-104027', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_3-104028', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_4-104029', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_5-104030', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_6-104031', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_7-104032', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_8-104033', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_9-104034', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_10-104035', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_11-104036', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_12-104037', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_13-104038', './logs/batch_t-2_r-69105_a-0.1000_s-33_e-0.0100_d-0.0500_b-1_n-20_B-germain_c-2_14-104039']\n"
      ]
     }
    ],
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +257,88 @@
      "output_type": "stream",
      "text": [
       "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON) \r\n",
-      "            103465     alvis     bash  frejohk  R    6:11:43      1 alvis1-08 \r\n"
+      "            104030     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104031     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104032     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104033     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104034     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104035     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104036     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104037     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104038     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104039     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104029     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104028     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104027     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104014     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104015     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104016     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104017     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104018     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104019     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104020     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104021     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104022     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104023     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104024     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104025     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104026     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104013     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104012     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104011     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103998     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103999     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104000     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104001     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104002     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104003     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104004     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104005     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104006     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104007     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104008     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104009     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            104010     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103997     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103996     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103995     alvis batch_bo  frejohk PD       0:00      1 (Priority) \r\n",
+      "            103959     alvis batch_bo  frejohk  R       0:26      1 alvis2-03 \r\n",
+      "            103960     alvis batch_bo  frejohk  R       0:26      1 alvis2-12 \r\n",
+      "            103961     alvis batch_bo  frejohk  R       0:26      1 alvis2-12 \r\n",
+      "            103962     alvis batch_bo  frejohk  R       0:26      1 alvis2-12 \r\n",
+      "            103963     alvis batch_bo  frejohk  R       0:26      1 alvis2-14 \r\n",
+      "            103964     alvis batch_bo  frejohk  R       0:26      1 alvis2-14 \r\n",
+      "            103965     alvis batch_bo  frejohk  R       0:26      1 alvis2-14 \r\n",
+      "            103966     alvis batch_bo  frejohk  R       0:26      1 alvis2-14 \r\n",
+      "            103967     alvis batch_bo  frejohk  R       0:26      1 alvis2-14 \r\n",
+      "            103968     alvis batch_bo  frejohk  R       0:26      1 alvis2-14 \r\n",
+      "            103969     alvis batch_bo  frejohk  R       0:26      1 alvis2-14 \r\n",
+      "            103970     alvis batch_bo  frejohk  R       0:26      1 alvis2-15 \r\n",
+      "            103971     alvis batch_bo  frejohk  R       0:26      1 alvis2-15 \r\n",
+      "            103972     alvis batch_bo  frejohk  R       0:26      1 alvis2-15 \r\n",
+      "            103973     alvis batch_bo  frejohk  R       0:26      1 alvis2-15 \r\n",
+      "            103974     alvis batch_bo  frejohk  R       0:26      1 alvis2-16 \r\n",
+      "            103975     alvis batch_bo  frejohk  R       0:26      1 alvis2-16 \r\n",
+      "            103976     alvis batch_bo  frejohk  R       0:26      1 alvis2-16 \r\n",
+      "            103977     alvis batch_bo  frejohk  R       0:26      1 alvis2-16 \r\n",
+      "            103978     alvis batch_bo  frejohk  R       0:26      1 alvis2-18 \r\n",
+      "            103979     alvis batch_bo  frejohk  R       0:26      1 alvis2-18 \r\n",
+      "            103980     alvis batch_bo  frejohk  R       0:26      1 alvis2-18 \r\n",
+      "            103981     alvis batch_bo  frejohk  R       0:26      1 alvis2-18 \r\n",
+      "            103982     alvis batch_bo  frejohk  R       0:26      1 alvis2-18 \r\n",
+      "            103983     alvis batch_bo  frejohk  R       0:26      1 alvis2-18 \r\n",
+      "            103984     alvis batch_bo  frejohk  R       0:26      1 alvis2-19 \r\n",
+      "            103985     alvis batch_bo  frejohk  R       0:26      1 alvis2-19 \r\n",
+      "            103986     alvis batch_bo  frejohk  R       0:26      1 alvis2-19 \r\n",
+      "            103987     alvis batch_bo  frejohk  R       0:26      1 alvis2-20 \r\n",
+      "            103988     alvis batch_bo  frejohk  R       0:26      1 alvis2-20 \r\n",
+      "            103989     alvis batch_bo  frejohk  R       0:26      1 alvis2-20 \r\n",
+      "            103990     alvis batch_bo  frejohk  R       0:26      1 alvis2-20 \r\n",
+      "            103991     alvis batch_bo  frejohk  R       0:26      1 alvis2-20 \r\n",
+      "            103992     alvis batch_bo  frejohk  R       0:26      1 alvis2-20 \r\n",
+      "            103993     alvis batch_bo  frejohk  R       0:26      1 alvis2-20 \r\n",
+      "            103994     alvis batch_bo  frejohk  R       0:26      1 alvis2-20 \r\n",
+      "            103465     alvis     bash  frejohk  R    6:26:45      1 alvis1-08 \r\n"
      ]
     }
    ],
