load into array

--- a/minimal_example.ipynb
+++ b/minimal_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,34 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00001/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00002/study2/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00002/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00002/study1/view2_lateral.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00003/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00004/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00004/study1/view2_lateral.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00005/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00005/study1/view2_lateral.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00005/study2/view1_frontal.jpg']\n",
-      "[[1, 0, 0, 0, 0, 0], [0, 1, 1, 1, 1, 1], [0, 0, 0, 1, 0, 0], [0, 0, 0, 1, 0, 0], [0, 0, 1, 0, 0, 0], [1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0]]\n",
-      "['/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64541/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64542/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64542/study1/view2_lateral.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64543/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64544/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64545/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64546/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64547/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64547/study1/view2_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/valid/patient64547/study1/view3_lateral.jpg']\n",
-      "[[0, 1, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 1, 0, 0, 0], [1, 0, 0, 0, 0, 0], [0, 0, 0, 0, 1, 1], [0, 1, 0, 0, 1, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0]]\n",
-      "['/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00001/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00002/study2/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00002/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00002/study1/view2_lateral.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00003/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00004/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00004/study1/view2_lateral.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00005/study1/view1_frontal.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00005/study1/view2_lateral.jpg', '/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00005/study2/view1_frontal.jpg']\n",
-      "[[1, 0, 0, 0, 0, 0], [0, 1, 1, 1, 1, 1], [0, 0, 0, 1, 0, 0], [0, 0, 0, 1, 0, 0], [0, 0, 1, 0, 0, 0], [1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0], [1, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0]]\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/adam/Code/Datasets/chexpert/resized32chex//home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00001/study1/view1_frontal.jpg'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-44-e1d2488201c2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    124\u001b[0m             \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m         \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmake_xray14_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 126\u001b[0;31m \u001b[0mload_resize_and_save\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchexpert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimg_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    127\u001b[0m  \u001b[0;31m#####load chestXray14 from files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    128\u001b[0m \u001b[0;31m# x_data=np.load(data_path+\"X_sample.npy\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-44-e1d2488201c2>\u001b[0m in \u001b[0;36mload_resize_and_save\u001b[0;34m(chexpert, img_size)\u001b[0m\n\u001b[1;32m    106\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfilenames\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m             \u001b[0mimg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtf_read_and_resize_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimg_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 108\u001b[0;31m             \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_path\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\"/\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    109\u001b[0m             \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow/lib/python3.9/site-packages/tensorflow/python/keras/preprocessing/image.py\u001b[0m in \u001b[0;36msave_img\u001b[0;34m(path, x, data_format, file_format, scale, **kwargs)\u001b[0m\n\u001b[1;32m    256\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mdata_format\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    257\u001b[0m     \u001b[0mdata_format\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbackend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage_data_format\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 258\u001b[0;31m   image.save_img(path,\n\u001b[0m\u001b[1;32m    259\u001b[0m                  \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    260\u001b[0m                  \u001b[0mdata_format\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata_format\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow/lib/python3.9/site-packages/keras_preprocessing/image/utils.py\u001b[0m in \u001b[0;36msave_img\u001b[0;34m(path, x, data_format, file_format, scale, **kwargs)\u001b[0m\n\u001b[1;32m     74\u001b[0m                       'RGBA images, converting to RGB.')\n\u001b[1;32m     75\u001b[0m         \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'RGB'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m     \u001b[0mimg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_format\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/tensorflow/lib/python3.9/site-packages/PIL/Image.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(self, fp, format, **params)\u001b[0m\n\u001b[1;32m   2230\u001b[0m                 \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r+b\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2231\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2232\u001b[0;31m                 \u001b[0mfp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbuiltins\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w+b\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2233\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2234\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/adam/Code/Datasets/chexpert/resized32chex//home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small/train/patient00001/study1/view1_frontal.jpg'"
+      "(223648, 32, 32, 3) (223648, 6)\n"
      ]
     }
    ],
@@ -122,6 +102,11 @@
     "\n",
     "#data_path=\"/home/adam/Code/Datasets/chexpert/1.0.0/\"\n",
     "#data_path2=\"/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small\"\n",
+    "def tf_load_image(filename):\n",
+    "    image_string = tf.io.read_file(filename)\n",
+    "    image = tf.image.decode_jpeg(image_string, channels=3)\n",
+    "    image=tf.cast(image, tf.float32)\n",
+    "    return image\n",
     "def tf_read_and_resize_image(filename,img_size):\n",
     "    ### takes file path and image size and resizes the image\n",
     "    image_string = tf.io.read_file(filename)\n",
@@ -130,7 +115,7 @@
     "    image = tf.image.resize(image, (img_size, img_size))#, method=tf.image.ResizeMethod.BILINEAR)\n",
     "    return image\n",
     "\n",
-    "def load_from_csv(imgs_path,csv_path):\n",
+    "def load_from_csv(imgs_path,csv_path,resized=False):\n",
     "    _LABELS = collections.OrderedDict({\n",
     "            \"-1.0\": \"uncertain\",\n",
     "            \"1.0\": \"positive\",\n",
@@ -152,9 +137,18 @@
     "            name = row[\"Path\"]\n",
     "            labels = [_LABELS[row[key]] for key in label_keys]\n",
     "            labels_overlap=[labeldict[labels[i]] for i in overlapping_labels]\n",
-    "\n",
+    "            if resized:\n",
+    "                A=name.split('/')[1:]\n",
+    "                path=\"resized32chex\"\n",
+    "                for a in A:\n",
+    "                    path+=\"/\"+a\n",
+    "                name=path\n",
+    "                \n",
+    "                    \n",
     "            ## save the image_name and the label array\n",
     "            label_arr.append(labels_overlap)\n",
+    "            #print(name)\n",
+    "            \n",
     "            arr.append(os.path.join(imgs_path, name))\n",
     "        return arr,label_arr\n",
     "    \n",
@@ -185,9 +179,9 @@
     "        return result.astype(int)\n",
     "\n",
     "    sample['Finding_Labels'] = sample['Finding_Labels'].apply(lambda x: make_one_hot(x))\n",
-    "    print(sample['Finding_Labels'].shape)\n",
+    "    #print(sample['Finding_Labels'].shape)\n",
     "    y=sample['Finding_Labels']\n",
-    "    return y\n",
+    "    return np.array(y)\n",
     "\n",
     "def load_resize_and_save(chexpert=False,img_size=32):\n",
     "##### loads the xray datasets from the raw images and then resizes to desired size and saves them in a new directory\n",
@@ -207,13 +201,25 @@
     "        labels.extend(labels_2)\n",
     "     \n",
     "        new_path=data_path+\"resized\"+str(img_size)+\"chex\"\n",
-    "        if not os.path.exists(new_path):\n",
-    "            os.makedirs(new_path)\n",
+    "#         if not os.path.exists(new_path):\n",
+    "#             os.makedirs(new_path)\n",
     "        ## load in, resize and save image in array file\n",
     "        for file in filenames:\n",
     "            img=np.array(tf_read_and_resize_image(file,img_size))\n",
-    "            tf.keras.preprocessing.image.save_img(new_path,img)\n",
-    "            sys.exit(-1)\n",
+    "            \n",
+    "            A=file.split('/')[-4:]\n",
+    "            path=\"\"\n",
+    "            for a in A:\n",
+    "                if a[-4:]==\".jpg\":\n",
+    "                    if not os.path.exists(new_path+path):\n",
+    "                        os.makedirs(new_path+path)\n",
+    "                    \n",
+    "                path+=\"/\"+a\n",
+    "                \n",
+    "            output_path=new_path+path\n",
+    "            \n",
+    "            #print(output_path)\n",
+    "            tf.keras.preprocessing.image.save_img(output_path,img)\n",
     "            \n",
     "        #np.save(\"/home/adam/Code/Datasets/chexpert/chexpert128.npy\",np.array([np.array(tf_read_and_resize_image(file)) for file in filenames]))\n",
     "        #np.save(\"/home/adam/Code/Datasets/chexpert/labels.npy\",np.array(labels)) # save labels to separate file\n",
@@ -226,11 +232,48 @@
     "        dirs = [l for l in os.listdir(data_path+\"images/\") if l != '.DS_Store']\n",
     "        for file in dirs:\n",
     "            img=np.array(tf_read_and_resize_image(data_path+\"images/\"+file,img_size))\n",
-    "            print(img)\n",
+    "            #print(img)\n",
     "            tf.keras.preprocessing.image.save_img(new_path+\"/\"+file,img)\n",
-    "            sys.exit(-1)\n",
+    "        \n",
+    "#load_resize_and_save(chexpert=False,img_size=32)\n",
+    "\n",
+    "def load_to_array(chexpert=False,img_size=32):\n",
+    "    if chexpert:\n",
+    "        data_path=\"/home/adam/Code/Datasets/chexpert/\"\n",
+    "        _DATA_DIR = \"/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small\" \n",
+    "        _TRAIN_DIR = os.path.join(_DATA_DIR, \"train\")\n",
+    "        _VALIDATION_DIR = os.path.join(_DATA_DIR, \"valid\")\n",
+    "        _TRAIN_LABELS_FNAME = os.path.join(_DATA_DIR, \"train.csv\")\n",
+    "        _VALIDATION_LABELS_FNAME = os.path.join(_DATA_DIR, \"valid.csv\")\n",
+    "\n",
+    "        filenames,labels=load_from_csv(data_path,_TRAIN_LABELS_FNAME,True)\n",
+    "\n",
+    "        filenames_2,labels_2=load_from_csv(data_path,_VALIDATION_LABELS_FNAME,True)\n",
+    "        \n",
+    "        filenames.extend(filenames_2)\n",
+    "        arr=[]\n",
+    "        labels.extend(labels_2)\n",
+    "        #for file in filenames:\n",
+    "            #print(np.array(tf_load_image(file)))\n",
+    "            #sys.exit(-1)\n",
+    "        arr= np.array([np.array(tf_load_image(img)) for img in filenames])\n",
+    "        np.save(data_path+\"chexpert_\"+str(img_size)+\".npy\",arr)\n",
+    "        np.save(data_path+\"chexpert_\"+str(img_size)+\"_labels.npy\",labels)\n",
+    "        return arr, np.array(labels)\n",
+    "    else:\n",
+    "        data_path=\"/home/adam/Code/Datasets/chestXray14/\"\n",
+    "        dirs = [l for l in os.listdir(data_path+\"resized\"+str(img_size)+\"/\") if l != '.DS_Store']\n",
+    "        arr=[]\n",
+    "        #arr= np.array([np.array(tf_load_image(data_path+\"resized\"+str(img_size)+\"/\"+img)) for img in dirs])\n",
     "        y=make_xray14_labels()\n",
-    "load_resize_and_save(chexpert=True,img_size=32)\n",
+    "        #np.save(data_path+\"chestxray14_\"+str(img_size)+\".npy\",arr)\n",
+    "        np.save(data_path+\"chestxray14_\"+str(img_size)+\"_labels.npy\",y)\n",
+    "        return arr, np.array(y)\n",
+    "#X, y=load_to_array(chexpert=True,img_size=32)\n",
+    "X, y=load_to_array(chexpert=True,img_size=32)\n",
+    "print(X.shape, y.shape)\n",
+    "###### load the resized files into numpy array and save that to a file\n",
+    "\n",
     " #####load chestXray14 from files\n",
     "# x_data=np.load(data_path+\"X_sample.npy\")\n",
     "#y=pd.read_csv(data_path+\"sample_labels.csv\")\n",
