batch code changed?

--- a/batch_queue_bounds.ipynb
+++ b/batch_queue_bounds.ipynb
@@ -53,7 +53,7 @@
     "alphas=[0.0, 0.1]#0,0.3]\n",
     "sigmas=[[3,2],[1,2],[3,3]]\n",
     "\n",
-    "project_folder = \"/cephyr/users/frejohk/Alvis/projects/\""
+    "project_folder = \"/cephyr/users/adambre/Alvis/\""
    ]
   },
   {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "scrolled": false
    },
@@ -275,8 +275,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON) \r\n",
-      "            105661     alvis     bash  adambre  R       9:31      1 alvis1-02 \r\n"
+      "squeue: option requires an argument -- 'u'\r\n",
+      "Try \"squeue --help\" for more information\r\n"
      ]
     }
    ],
