--- a/minimal_example.ipynb
+++ b/minimal_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "from data.tasks import *\n",
     "from data.label_shift import label_shift_linear, plot_labeldist, plot_splitbars\n",
     "from experiments.models import *\n",
-    "from experiments.SL_bound import *\n",
+    "#from experiments.SL_bound import *\n",
     "from util.kl import *\n",
     "from util.misc import *\n",
     "from results.plotting import *\n",
@@ -39,8 +39,19 @@
     "num_classes = 10\n",
     "make_plots = False\n",
     "\n",
-    "delta=0.05 ## what would this be?   \n",
-    "\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "if gpus:\n",
+    "  # Restrict TensorFlow to only allocate 1*X GB of memory on the first GPU\n",
+    "  try:\n",
+    "    tf.config.experimental.set_virtual_device_configuration(\n",
+    "        gpus[0],\n",
+    "        [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=(1024*4))])\n",
+    "    logical_gpus = tf.config.experimental.list_logical_devices('GPU')\n",
+    "    print(len(gpus), \"Physical GPUs,\", len(logical_gpus), \"Logical GPUs\")\n",
+    "  except RuntimeError as e:\n",
+    "    # Virtual devices must be set before GPUs have been initialized\n",
+    "    print(e)\n",
+    "    \n",
     "img_rows, img_cols = 32, 32\n",
     "project_folder = \"/cephyr/users/adambre/Alvis/\"\n",
     "\n",
@@ -53,58 +64,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-   "# Load data"
+    "# Load data"
    ]
   },
   {
    "cell_type": "code",
-      "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
- "source": [
+   "source": [
     "import time\n",
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n"
-      ]
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mean, variance 0.36348352 70.18035\n",
-      "---------------Load MNIST----------------\n",
-      "Training set (60000, 32, 32, 3) (60000, 10)\n",
-      "Test set (10000, 32, 32, 3) (10000, 10)\n",
-      "\n",
-      "\n",
-      "mean, variance 0.5223306 60.093555\n",
-      "---------------Load USPS----------------\n",
-      "Training set (7438, 32, 32, 3) (7438, 10)\n",
-      "Test set (1860, 32, 32, 3) (1860, 10)\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "TASK=4\n",
     "x_source,y_source,x_target,y_target=load_task(TASK)\n",
     "\n",
+    "## print amount of each labels in the dataset\n",
+    "print(len(y_source))\n",
+    "print(np.sum(y_source,axis=0))\n",
+    "print(\"-\"*40)\n",
+    "print(len(y_target))\n",
+    "print(np.sum(y_target,axis=0))\n",
+    "\n",
     "#data_path=\"/home/adam/Code/Datasets/chexpert/1.0.0/\"\n",
     "#data_path2=\"/home/adam/Code/Datasets/chexpert/CheXpert-v1.0-small\"\n",
     "\n"
-  ]
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,78 +141,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mean, variance 0.36348352 70.18035\n",
-      "---------------Load MNIST----------------\n",
-      "Training set (60000, 32, 32, 3) (60000, 10)\n",
-      "Test set (10000, 32, 32, 3) (10000, 10)\n",
-      "\n",
-      "\n",
-      "mean, variance 0.5223306 60.093555\n",
-      "---------------Load USPS----------------\n",
-      "Training set (7438, 32, 32, 3) (7438, 10)\n",
-      "Test set (1860, 32, 32, 3) (1860, 10)\n",
-      "\n",
-      "\n",
-      "\n",
-      " !!! training error threshold reached, no further training !!!\n",
-      "----------------------------------------\n",
-      "Finished training first posterior epoch\n",
-      "\n",
-      "Epoch 00001: saving model to posteriors/task4/Binary/lenet/100_0/2_1.ckpt\n",
-      "\n",
-      " !!! training error threshold reached, no further training !!!\n",
-      "----------------------------------------\n",
-      "Finished training posterior\n",
-      "Alpha is:0.1\n",
-      "----------------------------------------\n",
-      "Finished training prior\n",
-      "----------------------------------------\n",
-      "Finished computing prior sample and target errors\n",
-      "\n",
-      " !!! training error threshold reached, no further training !!!\n",
-      "----------------------------------------\n",
-      "Finished training first posterior epoch\n",
-      "\n",
-      "Epoch 00001: saving model to posteriors/task4/Binary/lenet/100_10/2_1.ckpt\n",
-      "\n",
-      " !!! training error threshold reached, no further training !!!\n",
-      "----------------------------------------\n",
-      "Finished training posterior\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#alphas=[0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9]\n",
-    "alphas=[0,0.1]\n",
-    "epsilons=[0.1]#,0.01,0.001]\n",
+    "alphas=[0.1]#,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9]#,0.3,0.5,0.7,0.9]\n",
+    "epsilons=[0.01]#,0.01,0.001]\n",
+    "architectures=[\"lenet\"]\n",
     "tasks=[4]\n",
     "for t in tasks:\n",
     "    x_source,y_source,x_target,y_target=load_task(t)\n",
-    "    for alpha in alphas:\n",
-    "        if alpha==0:\n",
-    "            pass\n",
-    "        else:\n",
-    "            print(\"Alpha is:\"+str(alpha))\n",
-    "            x_bound, x_prior, y_bound , y_prior = train_test_split(x_source,y_source,test_size=alpha,random_state=69105)\n",
-    "            w_a=train_prior(alpha,1,x_source,y_source,x_target=x_target,y_target=y_target,save=True,Task=t,Binary=True,batch_size=128)\n",
-    "        for epsilon in epsilons:\n",
-    "            w_s=train_posterior(alpha,x_source,y_source,None,x_test=x_source,y_test=y_source,epsilon=epsilon,Task=t,Binary=True,batch_size=128)\n",
-    "            #for sigma in sigmas:\n",
-    "                #res=read_and_prepare_results(alpha,x_source,y_source_bin,x_target,y_target_bin,sigma,delta,len(x_source),epsilon,Binary=True)#x_bound,y_bound,x_target,y_target_bin,sigma,delta,len(x_bound),epsilon,Binary=True)\n",
-    "                #plot_result_file(epsilon,alpha,sigma,TASK,Binary=True)"
+    "    print(len(y_source))\n",
+    "    print(len(y_target))\n",
+    "    for arch in architectures:\n",
+    "        for alpha in alphas:\n",
+    "            if alpha==0:\n",
+    "                pass\n",
+    "            else:\n",
+    "                print(\"Alpha is:\"+str(alpha))\n",
+    "                x_bound, x_prior, y_bound , y_prior = train_test_split(x_source,y_source,test_size=alpha,random_state=69105)\n",
+    "                w_a=train_prior(alpha,1,x_prior,y_prior,x_target=x_target,y_target=y_target,save=True,Task=t,Binary=True,batch_size=128,architecture=arch)\n",
+    "            for epsilon in epsilons:\n",
+    "                w_s=train_posterior(alpha,x_source,y_source,None,x_test=x_source,y_test=y_source,save=True,epsilon=epsilon,Task=t,Binary=True,batch_size=128,architecture=arch)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#alphas=[0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9]\n",
+    "alphas=[0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9]#,0.3,0.5,0.7,0.9]\n",
+    "epsilons=[0.05]#,0.1,0.05]#[0.03,0.01,0.001] [0.15,0.1,0.05]\n",
+    "architectures=[\"lenet\"]\n",
+    "tasks=[6]\n",
+    "for t in tasks:\n",
+    "    \"\"\"\n",
+    "    task 6\n",
+    "    239886\n",
+    "    [174064  65822]\n",
+    "    ----------------------------------------\n",
+    "    95882\n",
+    "    [94126  1756]\n",
+    "    \"\"\"\n",
+    "    x_source,y_source,x_target,y_target=load_task(t)\n",
+    "    print(len(y_source))\n",
+    "    print(len(y_target))\n",
+    "    for arch in architectures:\n",
+    "        for alpha in alphas:\n",
+    "            if alpha==0:\n",
+    "                pass\n",
+    "            else:\n",
+    "                print(\"Alpha is:\"+str(alpha))\n",
+    "                x_bound, x_prior, y_bound , y_prior = train_test_split(x_source,y_source,test_size=alpha,random_state=69105)\n",
+    "                w_a=train_prior(alpha,1,x_prior,y_prior,x_target=x_target,y_target=y_target,save=True,Task=t,Binary=True,batch_size=128,architecture=arch)\n",
+    "            for epsilon in epsilons:\n",
+    "                w_s=train_posterior(alpha,x_source,y_source,None,x_test=x_source,y_test=y_source,save=True,epsilon=epsilon,Task=t,Binary=True,batch_size=128,architecture=arch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
